<resources>
    <string name="app_name">Park Easy</string>
    <string name="app_title">Park Easy</string>
    <string name="app_subtitle">Simple Parking Services</string>
    <string name="title_activity_login_register_activitiy">LoginRegisterActivitiy</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="your_name">Your name</string>
    <string name="re_type_password">Re-type password</string>
    <string name="register_description">Sign up for free!</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="tab_text_1">Sign in</string>
    <string name="tab_text_2">Sign Up</string>
    <string name="reservation">Reserve</string>
    <string name="set_date">SET DATE</string>
    <string name="set_time">SET TIME</string>
    <string name="make_reservation">Make reservation</string>
    <string name="reservation_info">Set a time and date for your reservation!</string>

    <string-array name="time_slots">
        <item>0:00 – 1:00</item>
        <item>1:00 – 2:00</item>
        <item>2:00 – 3:00</item>
        <item>3:00 – 4:00</item>
        <item>4:00 – 5:00</item>
        <item>5:00 – 6:00</item>
        <item>6:00 – 7:00</item>
        <item>7:00 – 8:00</item>
        <item>8:00 – 9:00</item>
        <item>9:00 – 10:00</item>
        <item>10:00 – 11:00</item>
        <item>11:00 – 12:00</item>
        <item>12:00 – 13:00</item>
        <item>13:00 – 14:00</item>
        <item>14:00 – 15:00</item>
        <item>15:00 – 16:00</item>
        <item>16:00 – 17:00</item>
        <item>17:00 – 18:00</item>
        <item>18:00 – 19:00</item>
        <item>19:00 – 20:00</item>
        <item>20:00 – 21:00</item>
        <item>21:00– 22:00</item>
        <item>22:00 – 23:00</item>
        <item>23:00 – 24:00</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation">Navigation</string>
    <string name="delete">Delete</string>
</resources>