<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amber_light"
    tools:context=".ReservationFormActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_reservation_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="Reservation Form">

        <Button
            android:id="@+id/reservation_form_toolbar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="?attr/colorPrimary"
            android:drawableLeft="@drawable/event" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/reservation_cityCardView"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_reservation_form"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:id="@+id/reservation_cityImage"
            android:layout_width="97dp"
            android:layout_height="99dp"
            android:adjustViewBounds="false"
            android:scaleType="fitXY" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/reservation_cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/reservation_cityCardView"
        app:layout_constraintTop_toBottomOf="@id/toolbar_reservation_form"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/reservation_cityParkingLots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/reservation_cityCardView"
        app:layout_constraintTop_toBottomOf="@id/reservation_cityName"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/reservation_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/reservation_info"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_reservation_form"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/reservation_set_date"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/set_date"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservation_cityCardView"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/reservation_set_time"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/set_time"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservation_cityCardView"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/reservation_set_date_picker"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:freezesText="true"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reservation_set_date"
        app:layout_constraintTop_toBottomOf="@+id/reservation_cityCardView"
        app:layout_constraintVertical_bias="0.25" />

    <Spinner
        android:id="@+id/reservation_set_time_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reservation_set_date"
        app:layout_constraintTop_toBottomOf="@+id/reservation_cityCardView"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/reservation_parkingImage"
        android:layout_width="150dp"
        android:layout_height="88dp"
        android:src="@drawable/parking_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_reservation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservation_parkingImage"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>